--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starwars-name-tutorial",
-  "version": "1.1.0",
+  "version": "1.3.0-beta.0",
   "description": "Get random Star Wars names",
   "main": "src/index.js",
   "scripts": {
