--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "commit": "git-cz ",
     "test": "mocha src/index.test.js -w",
-    "test:single": "mocha src/index.test.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 -lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov"
   },
   "repository": {
     "type": "git",
@@ -29,9 +31,11 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "codecov.io": "0.1.6",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.0.0",
     "ghooks": "2.0.0",
+    "istanbul": "0.4.5",
     "mocha": "3.4.1",
     "semantic-release": "^6.3.6"
   },
@@ -39,8 +43,8 @@
     "path": "node_modules/cz-conventional-changelog"
   },
   "config": {
-    "ghooks" : {
-      "pre-commit": "npm run test:single"
+    "ghooks": {
+      "pre-commit": "npm run test:single && npm run check-coverage"
     }
   }
 }
