--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "starwars-name-tutorial",
   "version": "0.0.0-development",
   "description": "Get random Star Wars names",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "commit": "git-cz ",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
+    "test:single": "nyc cover -x *.test.js _mocha -- -R spec src/index.test.js",
+    "watch:test": "npm t -- -w",
+    "test": "mocha src/index.test.js --compilers js:babel-register",
+    "cover": "nyc npm t",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 -lines 100",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 -lines 100",
+    "prebuild": "rimraf build",
+    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "report-coverage": "cat ./coverage/lcov.info | codecov"
   },
   "repository": {
@@ -20,6 +24,10 @@
     "star",
     "wars"
   ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "author": "Andrew Lewin <andrew@iqxcorp.com> (http://iqxcorp.com/)",
   "license": "MIT",
   "bugs": {
@@ -30,13 +38,20 @@
     "unique-random-array": "1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.24.1",
     "chai": "3.5.0",
     "codecov.io": "0.1.6",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.0.0",
     "ghooks": "2.0.0",
-    "istanbul": "0.4.5",
+    "i": "0.3.5",
     "mocha": "3.4.1",
+    "nyc": "10.3.2",
+    "prepack": "0.2.2",
+    "rimraf": "2.6.1",
     "semantic-release": "^6.3.6"
   },
   "czConfig": {
@@ -44,7 +59,13 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test:single && npm run check-coverage"
+      "pre-commit": "npm run cover && npm run check-coverage"
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
