--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 -lines 100",
     "prebuild": "rimraf build",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename instex.umd.js",
+    "build:umd.min": "webpack --output-filename instex.umd.js -p",
     "report-coverage": "cat ./coverage/lcov.info | codecov"
   },
   "repository": {
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
+    "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
@@ -48,11 +52,14 @@
     "cz-conventional-changelog": "2.0.0",
     "ghooks": "2.0.0",
     "i": "0.3.5",
+    "json-loader": "0.5.4",
     "mocha": "3.4.1",
+    "npm-run-all": "4.0.2",
     "nyc": "10.3.2",
     "prepack": "0.2.2",
     "rimraf": "2.6.1",
-    "semantic-release": "^6.3.6"
+    "semantic-release": "^6.3.6",
+    "webpack": "2.6.1"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
